<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.TheMovieDBItemDetailsFragment">
    <data>
        <variable
            name="mViewModel"
            type="com.iverno.gustavo.movihelp.data.TheMovieDBItemDetailsViewModelResponse" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/principal_color_app">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/image_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/spider_man" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_opacity"
            />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title=" "
            app:subtitle=" "
            style="@style/ToolbarWithSubtitle"
            android:background="@android:color/transparent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/dimen_80dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_22dp"
                android:text="@{mViewModel.theMovieDBItem.titleOrNameString}"
                tools:text="@string/title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen_30dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:padding="@dimen/dimen_5dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_14dp"
                        android:text="@string/type"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_5dp"
                        android:textColor="@color/white"
                        android:text="@{mViewModel.theMovieDBItem.theMovieTypeString}"
                        tools:text="@string/movie"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:padding="@dimen/dimen_5dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_14dp"
                        android:text="@string/popularity_title"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_5dp"
                        android:textColor="@color/white"
                        android:text="@{mViewModel.theMovieDBItem.popularityString}"
                        tools:text="@string/popularity"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:padding="@dimen/dimen_5dp"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_14dp"
                        android:text="@string/vote_average_title"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_5dp"
                        android:textColor="@color/white"
                        android:text="@{mViewModel.theMovieDBItem.voteAverageString}"
                        tools:text="@string/vote_average"/>

                </LinearLayout>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dimen_30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:padding="@dimen/dimen_5dp"
                android:textStyle="bold"
                android:textSize="@dimen/dimen_14dp"
                android:text="@string/description"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_5dp"
                android:textSize="@dimen/dimen_18dp"
                android:textColor="@color/white"
                android:text="@{mViewModel.theMovieDBItem.description}"
                tools:text="@string/description_value"/>
        </LinearLayout>
        </LinearLayout>


    </FrameLayout>



    </LinearLayout>

</layout>