<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="mViewModel"
            type="com.iverno.gustavo.movihelp.ui.home.TheMovieDBItemDetailViewModel" />
    </data>
    <LinearLayout
        android:id="@+id/listMode1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    app:cardElevation = "5dp"
                    app:cardCornerRadius = "45dp"
                    android:foregroundGravity = "center"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:layout_centerInParent = "true"
                    android:layout_width = "90dp"
                    android:layout_height = "90dp">
                    <ImageView
                        android:id="@+id/imageview"
                        android:scaleType = "centerCrop"
                        android:layout_width="90dp"
                        tools:src="@drawable/logo_app_"
                        android:layout_height="90dp" />
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="15dp"
                        android:maxLines="1"
                        android:text="@string/title"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/type_movie"
                            android:padding="@dimen/dimen_5dp"
                            android:layout_marginRight="@dimen/dimen_53dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:id="@+id/type"
                            android:padding="@dimen/dimen_5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/popularity_two_point"
                            android:padding="@dimen/dimen_5dp"
                            android:layout_marginRight="@dimen/dimen_21dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:id="@+id/popularity"
                            android:padding="@dimen/dimen_5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/popularity"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:text="@string/vote_average_two_point"
                            android:padding="@dimen/dimen_5dp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                        <TextView
                            android:id="@+id/vote_average"
                            android:padding="@dimen/dimen_5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/vote_average"/>
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
