<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.HomeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/principal_color_app">
        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="@string/text_search_help"
            android:id="@+id/search_text"
            android:background="@drawable/search_border"
            android:layout_margin="@dimen/dimen_16dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_16dp"
            android:paddingEnd="@dimen/dimen_5dp"
            android:paddingTop="@dimen/dimen_10dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/type"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.43"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/category"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spinner_category"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_2dp"
            android:background="@color/gray"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5"
            tools:listitem="@layout/list_item_the_movie_detail" />
    </LinearLayout>
</layout>
